client: fix sort arrows overlapping headers
Sort arrows of planning and history tables were
overlapping columns headers.

--- a/app/client/admin/compass/sass/mixins/_elements.scss
+++ b/app/client/admin/compass/sass/mixins/_elements.scss
@@ -56,7 +56,7 @@
   .sort {
     position: absolute;
     top: 12px;
-    right: 25px;
+    right: 18px;
     .caret, .caret-top {
       opacity: .5;
       &.active {
