--- a/app/client/admin/compass/sass/modules/_item-detail.scss
+++ b/app/client/admin/compass/sass/modules/_item-detail.scss
@@ -156,7 +156,7 @@
             a {
               color: white;
               display: block;
-              padding: 0 10px;
+              padding: 0 20px 0 10px;
               text-decoration: none;
               border-right: 1px solid white;
             }
